--- a/imrahmed/css/style.css
+++ b/imrahmed/css/style.css
@@ -1714,7 +1714,7 @@ border-bottom-right-radius: 15px;*/
 
 /* Share Button */
 .sharede,.sharebrow{position:relative;display:block;font-size:0;margin:auto;text-align:center}
-.sharebrow{display:block;text-align:center;margin:30px 0 0 0}
+.sharebrow{display:block;text-align:center;margin:0 0 0 30px}
 .sharebrow a.fb,.sharebrow a.gp,.sharebrow a.tw,.sharebrow span.pl{text-decoration:none!important;display:inline-block;margin:0 .5px;font-weight:400;font-size:12px;color:#fff;text-shadow:none;padding:4px 10px;opacity:1;transition:all .3s}
 .sharebrow a.gp {background:#f20000;}
 .sharebrow a.fb {background:#516ca4;}
@@ -1728,7 +1728,7 @@ span.pl{color:green;cursor:pointer}
 .sharebrow .dropdown-menu{
 position:absolute;
 bottom:100%!important;
-right:64.7%!important;
+right:65.7%!important;
 z-index:99!important;
 float:left!important;
 min-width:100px!important;
