--- a/imrahmed/css/style.css
+++ b/imrahmed/css/style.css
@@ -1714,7 +1714,7 @@ border-bottom-right-radius: 15px;*/
 
 /* Share Button */
 .sharede,.sharebrow{position:relative;display:block;font-size:0;margin:auto;text-align:center}
-.sharebrow{display:block;text-align:center;margin:0 0 0 30px}
+.sharebrow{display:block;text-align:center;margin:0 0 30px 30px}
 .sharebrow a.fb,.sharebrow a.gp,.sharebrow a.tw,.sharebrow span.pl{text-decoration:none!important;display:inline-block;margin:0 .5px;font-weight:400;font-size:12px;color:#fff;text-shadow:none;padding:4px 10px;opacity:1;transition:all .3s}
 .sharebrow a.gp {background:#f20000;}
 .sharebrow a.fb {background:#516ca4;}
@@ -1777,8 +1777,49 @@ background-color: #353535!important;
 #subscribe-box .emailfield .submitbutton:active,#subscribe-box .emailfield .submitbutton:hover{opacity:1}
 .post-outer #subscribe-box{background:#f5f5f5;padding:20px;overflow:hidden;border:3px solid #e9e9e9}
 .post-outer #subscribe-box h4{font-size:16px;margin:0 0 15px 0;color:#333;text-transform:uppercase}
-
-
+/* tag list */
+.article-tag-list {
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+}
+.article-tag-list-item {
+  display: inline-block;
+  margin: 0 8px 8px 0;
+  border-radius: 2px;
+  padding: 0;
+}
+.article-tag-list-item:nth-child(n+1) {
+  background: #8bc34a;
+}
+.article-tag-list-item:nth-child(n+2) {
+  background: #673ab7;
+}
+.article-tag-list-item:nth-child(n+3) {
+  background: #ff9800;
+}
+.article-tag-list-item:nth-child(n+4) {
+  background: #f44336;
+}
+.article-tag-list-item:nth-child(n+5) {
+  background: #00abc0;
+}
+.article-tag-list-item:nth-child(n+6) {
+  background: #2196f3;
+}
+.article-tag-list-link {
+  display: block;
+  padding: 0 16px;
+  line-height: 28px;
+  color: rgba(255, 255, 255, 0.8);
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+}
+.article-tag-list-link:hover {
+  color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.26);
+}
 
 .reaction-buttons table{
   border:none;
