--- a/imrahmed/css/style.css
+++ b/imrahmed/css/style.css
@@ -1786,9 +1786,9 @@ background-color: #353535!important;
 }
 .article-tag-list-item {
   display: inline-block;
-  margin: 0 8px 8px 0;
+  margin: 0 8px 8px 0 !important;
   border-radius: 2px;
-  padding: 0;
+  padding: 0 !important;
 }
 .article-tag-list-item:nth-child(n+1) {
   background: #8bc34a;
