--- a/imrahmed/css/style.css
+++ b/imrahmed/css/style.css
@@ -1017,12 +1017,12 @@ font-size: 13px;
     -ms-transform:scale(1.1);
     -o-transform:scale(1.1);
     transform:scale(1.1);
-    background: #ff5c5c;
+    background: #6fbfc6;
     border-radius: 50%;
     height: 100px;
     width: 100px;
     animation: pulse 1s ease infinite;
-    border:1px solid #6fbfc6;
+    border:1px solid #ff5c5c;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
